--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # VITE_API_URL=http://localhost:8080
-VITE_API_URL=https://zhpqc2yvjv.ap-south-1.awsapprunner.com
+VITE_API_BASE_URL=https://zhpqc2yvjv.ap-south-1.awsapprunner.com
 
